--- a/src/RoslynMapper.Benchmark/packages.config
+++ b/src/RoslynMapper.Benchmark/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="3.2.1" targetFramework="net45" />
+  <package id="BLToolkit" version="4.1.21" targetFramework="net45" />
+  <package id="EmitMapper" version="1.0.0" targetFramework="net45" />
   <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
   <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
   <package id="Microsoft.CodeAnalysis.Common" version="0.6.4033103-beta" targetFramework="net45" />
