--- a/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
+++ b/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
@@ -58,6 +58,7 @@
     <Compile Include="MapEngineFixture.cs" />
     <Compile Include="MapEngineTests.cs" />
     <Compile Include="Convert\TypeConvertTests.cs" />
+    <Compile Include="Map\MemberTests.cs" />
     <Compile Include="TypeConverterTests.cs" />
     <Compile Include="ValueTypesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
