custom member bind move mapper class code generation to typemap

--- a/src/RoslynMapper.Samples/RoslynMapper.Samples.csproj
+++ b/src/RoslynMapper.Samples/RoslynMapper.Samples.csproj
@@ -55,6 +55,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HelloWorld.cs" />
+    <Compile Include="ISample.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
