--- a/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
+++ b/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Map\MemberTests.cs" />
     <Compile Include="MemberResolveTests.cs" />
     <Compile Include="TypeConverterTests.cs" />
+    <Compile Include="TypeResolveTests.cs" />
     <Compile Include="ValueTypesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
