--- a/src/RoslynMapper.WebSite/packages.config
+++ b/src/RoslynMapper.WebSite/packages.config
@@ -12,10 +12,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Immutable" version="1.1.20-beta" targetFramework="net45" />
-  <package id="Microsoft.Bcl.Metadata" version="1.0.9-alpha" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.Common" version="0.6.4033103-beta" targetFramework="net45" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="0.6.4033103-beta" targetFramework="net45" />
+  <package id="Microsoft.jQuery.Unobtrusive.Ajax" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
@@ -31,6 +28,5 @@
   <package id="Newtonsoft.Json" version="5.0.6" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
-  <package id="RoslynMapper" version="0.1.6-alpha" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
