--- a/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
+++ b/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Convert\TypeConvertTests.cs" />
     <Compile Include="Map\MemberTests.cs" />
     <Compile Include="MemberResolveTests.cs" />
+    <Compile Include="NestedMemberTests.cs" />
     <Compile Include="TypeConverterTests.cs" />
     <Compile Include="TypeResolveTests.cs" />
     <Compile Include="ValueTypesTests.cs" />
