--- a/src/RoslynMapper.WebSite/Web.config
+++ b/src/RoslynMapper.WebSite/Web.config
@@ -59,6 +59,10 @@
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.22.0" newVersion="1.1.22.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
