--- a/src/RoslynMapper.Samples/RoslynMapper.Samples.csproj
+++ b/src/RoslynMapper.Samples/RoslynMapper.Samples.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Benchmark.cs" />
+    <Compile Include="DataReader.cs" />
     <Compile Include="HelloWorld.cs" />
     <Compile Include="ISample.cs" />
     <Compile Include="Program.cs" />
