add datareader test sample skip DateTime and Guid type memeber resovle max depth 10 add nuget symbols package

--- a/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
+++ b/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Data\DataReaderTests.cs" />
+    <Compile Include="MapDepthTests.cs" />
     <Compile Include="MemberBindTests.cs" />
     <Compile Include="ConversionOperatorTests.cs" />
     <Compile Include="EnumTypeTests.cs" />
