--- a/src/.nuget/RoslynMapper.nuspec
+++ b/src/.nuget/RoslynMapper.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/08/nuspec.xsd">
     <metadata>
         <id>RoslynMapper</id>
-        <version>0.1.8-alpha</version>
+        <version>0.1.11-alpha</version>
         <title>RoslynMapper</title>
         <authors>liuhongbo@live.com</authors>
         <owners>liuhongbo@live.com</owners>
@@ -18,6 +18,8 @@
 	<tags>Roslyn Mapper</tags>
     </metadata>
     <files>
-        <file src="..\RoslynMapper\bin\release\RoslynMapper.dll" target="lib\net45\RoslynMapper.dll" />
+        <file src="..\RoslynMapper\bin\release\RoslynMapper.dll" target="lib\net45" />
+		<file src="..\RoslynMapper\bin\release\RoslynMapper.pdb" target="lib\net45" />
+		<file src="..\RoslynMapper\**\*.cs" target="src" />
     </files>
 </package>
