--- a/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
+++ b/src/RoslynMapper.UnitTests/RoslynMapper.UnitTests.csproj
@@ -68,6 +68,7 @@
     <Compile Include="MapEngineTests.cs" />
     <Compile Include="Convert\TypeConvertTests.cs" />
     <Compile Include="Map\MemberTests.cs" />
+    <Compile Include="MemberIgnoreTests.cs" />
     <Compile Include="MemberResolveTests.cs" />
     <Compile Include="NestedMemberBindTests.cs" />
     <Compile Include="NestedMemberTests.cs" />
