--- a/src/RoslynMapper/RoslynMapper.csproj
+++ b/src/RoslynMapper/RoslynMapper.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net46;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net45;</TargetFrameworks>
     <Title>RoslynMapper</Title>
     <Version>0.3.1</Version>
     <Authors>liuhongbo@live.com</Authors>
