--- a/src/RoslynMapper.Benchmark/RoslynMapper.Benchmark.csproj
+++ b/src/RoslynMapper.Benchmark/RoslynMapper.Benchmark.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
-    <Authors>liuhongbo@live.com</Authors>
-    <Company>liuhongbo@live.com</Company>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="ValueInjecter" Version="3.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RoslynMapper\RoslynMapper.csproj" />
-    <PackageReference Include="AutoMapper" Version="6.2.2" />
-    <PackageReference Include="BLToolkit" Version="4.3.9" />
-    <PackageReference Include="EmitMapper" Version="1.0.0" />
-    <PackageReference Include="valueinjecter" Version="3.1.1.5" />
   </ItemGroup>
 
 </Project>
