--- a/src/RoslynMapper/RoslynMapper.csproj
+++ b/src/RoslynMapper/RoslynMapper.csproj
@@ -1,43 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45;</TargetFrameworks>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Title>RoslynMapper</Title>
-    <Version>0.3.1</Version>
-    <Authors>liuhongbo@live.com</Authors>
-    <Company>liuhongbo@live.com</Company>
     <Description>An object to object mapper</Description>
-    <Copyright>Copyright ©  2018 liuhongbo@live.com</Copyright>
-    <PackageLicenseUrl>https://github.com/liuhongbo/RoslynMapper</PackageLicenseUrl>
+    <Copyright>Copyright ©  2018-2023 liuhongbo@live.com</Copyright>
     <PackageProjectUrl>https://github.com/liuhongbo/RoslynMapper</PackageProjectUrl>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <RepositoryUrl>https://github.com/liuhongbo/RoslynMapper</RepositoryUrl>
     <PackageTags>Roslyn Mapper ObjectMapper</PackageTags>
-    <RepositoryType>Git repo in GitHub</RepositoryType>
-    <PackageReleaseNotes>migrate to net standard</PackageReleaseNotes>
+    <PackageReleaseNotes>migrate to net standard 2.1</PackageReleaseNotes>
+    <AssemblyVersion>0.4.0.0</AssemblyVersion>
+    <FileVersion>0.4.0.0</FileVersion>
+    <PackageId>RoslynMapper</PackageId>
+    <Version>0.4.0</Version>
+    <Authors>liuhongbo@live.com</Authors>
+    <Product>RoslynMapper</Product>
+    <RepositoryType>git</RepositoryType>
   </PropertyGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.6.1" />
+  <ItemGroup>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" />
   </ItemGroup>
 
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net46'">
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="2.6.1" />   
-  </ItemGroup>
-
-  <ItemGroup Condition=" '$(TargetFramework)' == 'net45'">
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="1.3.2" />
-  </ItemGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)'=='net45'">
-    <AssemblyTitle>RoslynMapper .NET 4.5</AssemblyTitle>    
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)'=='net46'">
-    <AssemblyTitle>RoslynMapper .NET 4.6</AssemblyTitle>    
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <AssemblyTitle>RoslynMapper .NET Standard 2.0</AssemblyTitle>    
-  </PropertyGroup>
 </Project>
